Add export functionality with enhanced header handling and progress tracking